tests/ui/suggestions/call-boxed.stderr
error[E0308]: mismatched types
  --> $DIR/call-boxed.rs:4:9
   |
LL |     let mut x = 1i32;
   |                 ---- expected due to this value
LL |     let y = Box::new(|| 1);
   |                      -- the found closure
LL |     x = y;
   |         ^ expected `i32`, found `Box<main::{closure Box::new#0}>`
   |
   = note: expected type `i32`
            found struct `Box<main::{closure Box::new#0}>`
help: use parentheses to call this closure
   |
LL |     x = y();
   |          ++

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0308`.
